Men's 10k final added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
             <th>Youtube Link</th>
          </tr>
          <tr>
-            <td>Women's 100</td>
-            <td>todo link</td>
+            <td rowspan="2">Women's 100</td>
+         </tr>
+         <tr>
+            <td>todo finals link</td>
          </tr>
          <tr>
             <td>Men's 100</td>
@@ -69,7 +71,7 @@
          </tr>
          </tr>
          <td>Men's 10k</td>
-         <td>todo link</td>
+         <td><a href="https://youtu.be/I3cjhjJJsbg?si=XOwaUO6p8a0uiL3W&t=5" target="_blank">FINAL</a></td>
          </tr>
       </table>
    </body>
